# ai-scraping-defense-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: release-binaries.yml  release-images.yml  rust-ci.yml
config/: sample.env
crates/asd-core/: Cargo.toml
crates/asd-core/src/: lib.rs
crates/asd-detection/: Cargo.toml
crates/asd-detection/src/: lib.rs
crates/asd-providers/: Cargo.toml
crates/asd-providers/src/: lib.rs
crates/asd-tarpit/: Cargo.toml
crates/asd-tarpit/src/: lib.rs
docs/: API_EXAMPLES.md  PARITY.md  USAGE.md
helm/ai-scraping-defense-rust/: Chart.yaml  values.yaml
helm/ai-scraping-defense-rust/templates/: services.yaml
kubernetes/: rust-stack.yaml
scripts/: parity_smoke.ps1
services/admin-ui/: Cargo.toml
services/admin-ui/src/: main.rs
services/ai-service/: Cargo.toml
services/ai-service/src/: main.rs
services/captcha-service/: Cargo.toml
services/captcha-service/src/: main.rs
services/cloud-dashboard/: Cargo.toml
services/cloud-dashboard/src/: main.rs
services/cloud-proxy/: Cargo.toml
services/cloud-proxy/src/: main.rs
services/config-recommender/: Cargo.toml
services/config-recommender/src/: main.rs
services/edge-ops/: Cargo.toml
services/edge-ops/src/: main.rs
services/escalation-engine/: Cargo.toml
services/escalation-engine/src/: main.rs
services/pay-per-crawl/: Cargo.toml
services/pay-per-crawl/src/: main.rs
services/prompt-router/: Cargo.toml
services/prompt-router/src/: main.rs
services/public-blocklist/: Cargo.toml
services/public-blocklist/src/: main.rs
services/rag-trainer/: Cargo.toml
services/rag-trainer/src/: main.rs
services/tarpit-api/: Cargo.toml
services/tarpit-api/src/: main.rs
