[workspace]
resolver = "2"
members = [
    "crates/asd-core",
    "crates/asd-detection",
    "crates/asd-providers",
    "crates/asd-tarpit",
    "services/admin-ui",
    "services/ai-service",
    "services/captcha-service",
    "services/cloud-dashboard",
    "services/cloud-proxy",
    "services/config-recommender",
    "services/escalation-engine",
    "services/edge-ops",
    "services/pay-per-crawl",
    "services/prompt-router",
    "services/public-blocklist",
    "services/rag-trainer",
    "services/tarpit-api",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "ws"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
rand = "0.8"
redis = { version = "0.32", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
