[package]
name = "admin-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
asd-core = { path = "../../crates/asd-core" }
axum.workspace = true
hex.workspace = true
hmac.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true
