[package]
name = "cloud-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
asd-core = { path = "../../crates/asd-core" }
asd-providers = { path = "../../crates/asd-providers" }
axum.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
