[package]
name = "escalation-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
asd-core = { path = "../../crates/asd-core" }
asd-detection = { path = "../../crates/asd-detection" }
axum.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
